Web Inspector: displaying whitespace characters is broken https://bugs.webkit.org/show_bug.cgi?id=109412
Patch by Andrey Lushnikov <lushnikov@chromium.org> on 2013-02-11
Reviewed by Vsevolod Vlasov.

Add "pointer-events: none" rule for pseudo-class "before", which
maintains rendering of whitespace characters.

No new tests.

* inspector/front-end/inspectorSyntaxHighlight.css:
(.webkit-whitespace::before):

Canonical link: https://commits.webkit.org/127688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142447 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/inspectorSyntaxHighlight.css
+++ b/Source/WebCore/inspector/front-end/inspectorSyntaxHighlight.css
@@ -92,6 +92,7 @@
 
 .webkit-whitespace::before {
     position: absolute;
+    pointer-events: none;
     color: rgb(175, 175, 175);
 }
 
